fixed #10698 - Improve scrollbar style on BreadCrumb and TabMenu

--- a/src/app/components/breadcrumb/breadcrumb.css
+++ b/src/app/components/breadcrumb/breadcrumb.css
@@ -18,3 +18,7 @@
 .p-breadcrumb .p-menuitem-link {
     text-decoration: none;
 }
+
+.p-breadcrumb::-webkit-scrollbar {
+    display: none;
+}
