--- a/src/app/components/tabmenu/tabmenu.css
+++ b/src/app/components/tabmenu/tabmenu.css
@@ -33,3 +33,7 @@
     display: none;
     z-index: 1;
 }
+
+.p-tabmenu::-webkit-scrollbar {
+    display: none;
+}
